--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -73,10 +73,11 @@ body{
     /* outline:2px solid rgb(25, 10, 235); */
 }
 .imagen_olas{
-    width: 100%;
-    height: 118px;
+    /* width: 100%; */
+    height: 170px;
     position: static;
     margin-top: auto;
+
 }
 .contenedor__informacion--saludo{
     width: 50%;
@@ -124,16 +125,17 @@ body{
 .presentacion__imagen{
     /* padding-top: 12px;
     padding-left: 12px; */
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     /* outline: 2px solid blueviolet; */
 }.presentacion__mensaje{
     width: 60%;
-    margin-left: 30px;    
+    margin-left: 20px;    
 }
 .presentacion__mensaje h1{
     margin-bottom: 0px;
-    font-size:4vw;
+    font-stretch: semi-condensed;
+    font-size:3vw;
     margin-block-start: 0.1em;
 }
 
@@ -166,7 +168,7 @@ body{
     width: 90%;
     display: flex;
     flex-direction: column;
-    padding-top: 45px;
+    padding-top: 20px;
     align-items: center;
 }
 .opcion__busqueda--buscar button{
@@ -246,7 +248,7 @@ body{
     color: white;
 }
 .contenedor__frecuentesfAQS--titulo h1{
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 6px;
     margin-top: 10px;
     text-align: center;
