--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -217,26 +217,25 @@ body{
     /* border-radius: 20px; */
     width: 100%;
     height: 30em;
-    margin: auto;
+    /* margin: auto; */
     /* margin-top: 15px; */
     /* box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5); */
     display: flex;
     flex-direction: row;  
-     /* outline: 2px solid black; */
+     /* outline: 2px solid green; */
 }
 .contenedor__frecuentes{
     width: 70%;
     display: flex;
     flex-direction: row;
-    align-items: center;
     /* outline: 2px solid magenta; */
 }
 .contenedor__frecuentesfAQS{
     display: flex;
     flex-direction: column;
+    padding-left: 4rem;    
     width: 85%;
     height: 75%;
-    margin-left: 10%;
     /* outline: 2px solid red; */
 }
 .contenedor__frecuentesfAQS--titulo{
@@ -248,21 +247,39 @@ body{
     color: white;
 }
 .contenedor__frecuentesfAQS--titulo h1{
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom: 6px;
     margin-top: 10px;
     text-align: center;
     font-weight: bold;
 }
-.contenedor__frecuentesfAQS--preguntas{
-    background-color: lightgray;
-}
 .opcionesFAQS ul{
-font-size: 17px;
-    /* margin-right: 30px;
+    padding-left: 0px;
+}
+.opcionesFAQS li{
     text-decoration: none;
-    position: absolute;
-    text-align: right; */
+    font-size: 25px;
+    font-weight: bold;
+    border-top-left-radius:5px;
+    border-top-right-radius:25px;
+    border-bottom-right-radius:25px;
+    border-bottom-left-radius:5px;
+
+    
+    border:  3px solid orange;
+    box-shadow: 0px 8px 5px rgba(97, 97, 97, 0.50);
+    /* background-color:  rgb(233, 233, 27); */
+
+    padding: 10px;
+    margin: 10px;
+    margin-left: 0px;
+
+    list-style: none;
+    /* background-color: lightgray */
+}
+.opcionesFAQS a{
+    text-decoration: none;
+    color: black;
 }
 
 
